namespace NetKuber.Models;

public class Categoria
{
    public int id { get; set; }
    public string? nombre { get; set; }
    public string? descripcion { get; set; }
    public bool estado { get; set; }
}